--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -304,7 +304,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="{% url 'compose_w_data' %}?recipient={{form.instance.report.get_who_has_message_recipients}}&body={{form.instance.report.get_body_template}}&subject='hello'" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email about this report..."></span></a>
+                    <a href="{% url 'compose_w_data' %}?recipient={{form.instance.report.get_who_has_message_recipients}}&body=http://{{ request.META.HTTP_HOST }}{{form.instance.report.get_single_report_view_link}}&subject=Report {{form.instance.report.version_UUID}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email about this report..."></span></a>
                     <!--<a href="mailto:?subject=Report with id {{form.instance.report}}&body=http://{{ request.META.HTTP_HOST }}{% url 'expert_report_annotation' %}?version_uuid={{form.instance.report}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email about this report..."></span></a>-->
                 </h4>
             </div>
