--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -20,7 +20,7 @@
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
     <script src={% static "tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js" %}></script>
-    <script src="{% static "tigacrafting/bootstrap-select/js/bootstrap-select.min.js" %}"></script>
+    <script src={% static "tigacrafting/bootstrap-select/js/bootstrap-select.min.js" %}></script>
     <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
 </head>
 <body>
