--- a/tigacrafting/templates/tigacrafting/notifications.html
+++ b/tigacrafting/templates/tigacrafting/notifications.html
@@ -28,7 +28,7 @@
                 selector: '#body_en',
                 plugins: ["image","code"]
             });
-            $('.tokenize-demo').tokenize2({
+            $('.tokenize-user-uuid').tokenize2({
                 dropdownMaxItems: 15,
                 searchMinLength: 3,
                 dataSource: function(term, object){
@@ -45,8 +45,60 @@
                     });
                 }
             });
-            ajax_post_send_notifications = function(){
+            format_report = function(data){
+                var notifications_failed = data.notifications_failed;
+                var notifications_issued = data.notifications_issued;
+                var push_issued_android = data.push_issued_android;
+                var push_failed_android = data.push_failed_android;
+                var push_issued_ios = data.push_issued_ios;
+                var push_failed_ios = data.push_failed_ios;
+                var message = '<ul>' +
+                    '	<li><h3>Notifications</h3>' +
+                    '		<ul>' +
+                    '			<li style="color:green;">Success:'+ notifications_issued +'</li>' +
+                    '			<li style="color:red;">Fail:'+ notifications_failed +'</li>' +
+                    '		</ul>' +
+                    '	</li>' +
+                    '	<li><h3>Push</h3>' +
+                    '		<ul>' +
+                    '			<li><h4>Android</h4>' +
+                    '				<ul>' +
+                    '					<li style="color:green;">Success:'+ push_issued_android +'</li>' +
+                    '					<li style="color:red;">Fail:'+ push_failed_android +'</li>' +
+                    '				</ul>' +
+                    '			</li>' +
+                    '			<li><h4>IOS</h4>' +
+                    '				<ul>' +
+                    '					<li style="color:green;">Success:' + push_issued_ios + '</li>' +
+                    '					<li style="color:red;">Fail:' + push_failed_ios + '</li>' +
+                    '				</ul>' +
+                    '			</li>' +
+                    '		</ul>' +
+                    '	</li>' +
+                    '</ul>';
+                    return message;
+            };
 
+            ajax_post_send_notifications = function(notificationcontent_id){
+                notification_data = jsonify_notification(notificationcontent_id);
+                $('#gear').show();
+                $.ajax({
+                    type: "PUT",
+                    url: '/api/send_notifications/',
+                    dataType: 'json',
+                    headers: { "X-CSRFToken": "{{ csrf_token }}" },
+                    data: notification_data,
+                    success: function(data){
+                        $('#gear').hide();
+                        $("#dialog-message-report-text").html(format_report(data));
+                        $("#dialog-message-report").dialog("open");
+                    },
+                    error: function(jqXHR, textStatus, errorThrown){
+                        $('#gear').hide();
+                        $("#dialog-message-error-text").html(jqXHR.responseText);
+                        $("#dialog-message-error").dialog("open");
+                    }
+                });
             }
             ajax_post_notification_content = function(){
                 this_data = jsonify_notification_content();
@@ -57,7 +109,8 @@
                     headers: { "X-CSRFToken": "{{ csrf_token }}" },
                     data: this_data,
                     success: function(data){
-                        var notification_id = data.id;
+                        var notificationcontent_id = data.id;
+                        ajax_post_send_notifications(notificationcontent_id);
                     },
                     error: function(jqXHR, textStatus, errorThrown){
                         $("#dialog-message-error-text").html(jqXHR.responseText);
@@ -74,7 +127,7 @@
                 if(body_html_es_editor_content == ''){
                     return false;
                 }
-                if(get_selected_tokens().length == 0 && $("#accordion").accordion( "option", "active" ) == 0){
+                if(get_selected_tokens() == '' && $("#accordion").accordion( "option", "active" ) == 0){
                     return false;
                 }
                 return true;
@@ -85,6 +138,43 @@
                 }else{
                     ajax_post_notification_content();
                 }
+            });
+
+            var clear_everything = function(){
+                clear_tokens();
+                $("#accordion").accordion("option","active",0);
+                $("#radio-1").prop("checked", true);
+                $("#title_es").val("");
+                $("#title_ca").val("");
+                $("#title_en").val("");
+                tinymce.get('body_es').setContent('');
+                tinymce.get('body_ca').setContent('');
+                tinymce.get('body_en').setContent('');
+            };
+
+            $( "#clear_form" ).click(function() {
+                $('<div></div>').appendTo('body')
+                    .html('<div><h6>Proceed?</h6></div>')
+                    .dialog({
+                        modal: true,
+                        title: 'The form will be cleared and all fields will be set to default state',
+                        zIndex: 10000,
+                        autoOpen: true,
+                        width: 600,
+                        resizable: false,
+                        buttons: {
+                            Yes: function () {
+                                clear_everything();
+                                $(this).dialog("close");
+                            },
+                            No: function () {
+                                $(this).dialog("close");
+                            }
+                        },
+                        close: function (event, ui) {
+                            $(this).remove();
+                        }
+                    });
             });
             $('#gear').hide();
             $( "#accordion" ).accordion({
@@ -101,15 +191,38 @@
                 $('.token').each(function(index,value){
                     data.push($(value).attr('data-value'));
                 });
-                return data;
+                return data.join("$");
             };
+            get_push = function(){
+                return $('input[name=rb]:checked').attr('id') == 'radio-1';
+            }
             clear_tokens = function(){
                 $('.token').each(function(index,value){
                     $(value).remove();
                 });
             };
+            jsonify_notification = function(content_id){
+                var some_data = {};
+                var selected = $( "#accordion" ).accordion( "option", "active" );
+                if(selected==1){
+                    recipients = "all";
+                }else{
+                    recipients = get_selected_tokens();
+                }
+                user_id = {{ user_id }};
+                report_id = "f24ff558-fc1c-4b0c-aedb-00c427f60f94";
+                ppush = get_push();
+
+                some_data.recipients = recipients;
+                some_data.notification_content_id = content_id;
+                some_data.user_id = user_id;
+                some_data.report_id = report_id;
+                some_data.ppush = ppush;
+
+                return some_data;
+            };
             jsonify_notification_content = function(){
-                data = {}
+                var data = {};
                 var body_html_es = tinyMCE.get('body_es').getContent();
                 var body_html_ca = tinyMCE.get('body_ca').getContent();
                 var body_html_en = tinyMCE.get('body_en').getContent();
@@ -141,6 +254,15 @@
                     }
                 }
             });
+            $( "#dialog-message-report" ).dialog({
+                modal: true,
+                autoOpen: false,
+                buttons: {
+                    Ok: function() {
+                        $( this ).dialog( "close" );
+                    }
+                }
+            });
             $( "#dialog-message-validation" ).dialog({
                 modal: true,
                 autoOpen: false,
@@ -151,6 +273,7 @@
                     }
                 }
             });
+            $("#radio-1").prop("checked", true);
         });
     </script>
 </head>
@@ -181,8 +304,13 @@
                             <li>
                                 <button id="save_button" type="submit" class="btn btn-success btn-sm navbar-btn"
                                         style="margin-left:5px" data-toggle="tooltip" data-placement="bottom"
-                                        title="Save"><span
-                                        class="glyphicon glyphicon-floppy-disk"></span>
+                                        title="Send notifications"><span
+                                        class="glyphicon glyphicon-envelope"></span>
+                                </button>
+                                <button id="clear_form" type="submit" class="btn btn-success btn-sm navbar-btn"
+                                        style="margin-left:5px" data-toggle="tooltip" data-placement="bottom"
+                                        title="Clear form"><span
+                                        class="glyphicon glyphicon-remove"></span>
                                 </button>
                             </li>
                         </ul>
@@ -200,6 +328,11 @@
 <div id="dialog-message-error" title="Error saving data">
     <h2>Error message:</h2>
     <p id="dialog-message-error-text"></p>
+</div>
+
+<div id="dialog-message-report" title="Notifications have been issued!">
+    <h2>Sent notifications:</h2>
+    <p id="dialog-message-report-text"></p>
 </div>
 
 <div id="dialog-message-validation" title="There are some problems with your request...">
@@ -221,19 +354,18 @@
             <h3>Send message to some people</h3>
             <div>
                 <p>Select one or more user ids to which the notification will be sent (start typing the first 3 symbols of the user id and select from the dropdown):</p>
-                <select class="tokenize-demo" multiple></select>
+                <select class="tokenize-user-uuid" multiple></select>
             </div>
             <h3>Send message to everyone</h3>
-            <div><p>Sending x messages</p></div>
+            <div>
+                <p>{{ total_users }} messages will be sent</p>
+                <p style="background-color:red;color:white;">WARNING - This could take some time, use at your own risk!</p>
+            </div>
         </div>
         <h3>2 - Do you want to send also push notifications where available?:</h3>
         <div class="row">
-              <fieldset>
-                <label for="radio-1">Yes</label>
-                <input type="radio" name="radio-1" id="radio-1" checked="checked">
-                <label for="radio-2">No</label>
-                <input type="radio" name="radio-1" id="radio-2">
-              </fieldset>
+            <input type="radio" name="rb" id="radio-1">Yes
+            <input type="radio" name="rb" id="radio-2">No
         </div>
         <h3>3 - Compose the message you want to send below. Only (es) section are mandatory:</h3>
         <div style="background:#ffcc66;padding:20px;margin:15px;">
