Changed some texts in notification interface

--- a/tigacrafting/templates/tigacrafting/notifications.html
+++ b/tigacrafting/templates/tigacrafting/notifications.html
@@ -362,12 +362,12 @@
                 <p style="background-color:red;color:white;">WARNING - This could take some time, use at your own risk!</p>
             </div>
         </div>
-        <h3>2 - Do you want to send also push notifications where available?:</h3>
+        <h3>2 - Do you want the message to also generate an iconic notification, that the user will see even if the app is turned off?:</h3>
         <div class="row">
             <input type="radio" name="rb" id="radio-1">Yes
             <input type="radio" name="rb" id="radio-2">No
         </div>
-        <h3>3 - Compose the message you want to send below. Only (es) section are mandatory:</h3>
+        <h3>3 - Compose the message you want to send below. Only (es) section are mandatory. Please, remember to check your spelling!:</h3>
         <div style="background:#ffcc66;padding:20px;margin:15px;">
             <div class="row">
                 <div class="text-left col-md-4"><label>Message title(ES):</label></div>
