--- a/tigacrafting/templates/tigacrafting/notifications.html
+++ b/tigacrafting/templates/tigacrafting/notifications.html
@@ -118,6 +118,15 @@
                     }
                 });
             };
+            some_field_in_tinymce_is_missing = function(){
+                var body_html_es_editor_content = tinyMCE.get('body_es').getContent();
+                var body_html_ca_editor_content = tinyMCE.get('body_ca').getContent();
+                var body_html_en_editor_content = tinyMCE.get('body_en').getContent();
+                var title_es = $("#title_es").val();
+                var title_ca = $("#title_ca").val();
+                var title_en = $("#title_en").val();
+                return body_html_es_editor_content == '' || body_html_ca_editor_content == '' || body_html_en_editor_content == '' || title_es == '' ||  title_ca == '' || title_en == '';
+            }
             validate_data = function(){
                 var title_es = $("#title_es").val();
                 if(title_es == null || title_es == ''){
@@ -128,6 +137,9 @@
                     return false;
                 }
                 if(get_selected_tokens() == '' && $("#accordion").accordion( "option", "active" ) == 0){
+                    return false;
+                }
+                if($("#accordion").accordion( "option", "active" ) == 1 && some_field_in_tinymce_is_missing){
                     return false;
                 }
                 return true;
@@ -341,6 +353,7 @@
         <li>Either you have chosen to send the message to a few users and selected no ids in the user id box</li>
         <li>... or the 'Message title(es)' is blank</li>
         <li>... or the 'Message body(es)' is blank</li>
+        <li>... or you have chosen to send the message to everyone, in which case you must fill messages for all languages</li>
     </ul>
     <p>Fill these fields and try again please.</p>
 </div>
@@ -367,7 +380,7 @@
             <input type="radio" name="rb" id="radio-1">Yes
             <input type="radio" name="rb" id="radio-2">No
         </div>
-        <h3>3 - Compose the message you want to send below. Only (es) section are mandatory. Please, remember to check your spelling!:</h3>
+        <h3>3 - Compose the message you want to send below. Only (es) section are mandatory, but try to fill all languages if possible. Please, remember to check your spelling!:</h3>
         <div style="background:#ffcc66;padding:20px;margin:15px;">
             <div class="row">
                 <div class="text-left col-md-4"><label>Message title(ES):</label></div>
